[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "nrgpy"
version = "2.0.0"
authors = [
    {name = "David Carlson", email = "drc@nrgsystems.com"},
    {name = "NRG Technical Services", email = "support@nrgsystems.com"},
]
description="library for handling NRG Systems data files"
readme = "README.md"
license = { file = "LICENSE" }
keywords=['nrg', 'nrg systems', 'symphonie', 'symphonieplus', 'symphonieplus3', 'symphoniepro', 'logr', 'data', 'wind', 'solar', 'remote sensor', 'rsd', 'lidar', 'spidar']
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
    'pandas>=1.5',
    'psutil',
    'requests',
]
[tool.setuptools.packages]
find = {}

[project.urls]
Repository = "https://github.com/nrgpy/nrgpy"
Documentation = "https://nrgpy.github.io/nrgpy/index.html"

[project.optional-dependencies]
test = [
    'pytest',
]

dev = [
    'ruff',
    'black',
    'jupyterlab',
]