[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "nrgpy"
version = "2.3.4"
authors = [
    {name = "David Carlson", email = "drc@nrgsystems.com"},
    {name = "Natalie Babij", email = "natalie@chickadeemail.com"},
    {name = "NRG Technical Services", email = "support@nrgsystems.com"},
]
maintainers = [
    {name = "David Carlson", email = "davec.vt@gmail.com"},
]
description="library for handling NRG Systems data files"
readme = "README.md"
license = { file = "LICENSE" }
keywords=['nrg', 'nrg systems', 'symphonie', 'symphonieplus', 'symphonieplus3', 'symphoniepro', 'logr', 'data', 'wind', 'solar', 'remote sensor', 'rsd', 'lidar', 'spidar']
requires-python = ">=3.8"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    'packaging',
    'pandas>=1.5, >=2.0',
    'psutil',
    'requests',
]
[tool.setuptools]
packages = ["nrgpy"]

[project.urls]
Repository = "https://github.com/nrgpy/nrgpy"
Documentation = "https://nrgpy.github.io/nrgpy/index.html"

[project.optional-dependencies]
test = [
    'pytest',
]

dev = [
    'ruff',
    'black',
    'jupyterlab',
]

docs = [
    'numpydoc',
    'sphinx',
    'sphinx-book-theme',
]
